syntax = "proto3";

package cheqd.resource.v2;

import "google/api/annotations.proto";
import "cheqd/resource/v2/resource.proto";

option go_package = "github.com/cheqd/cheqd-node/x/resource/types/v2";

service Query {
  rpc Resource(QueryGetResourceRequest) returns (QueryGetResourceResponse) {
    option (google.api.http).get = "/1.0/identifiers/{collection_id}/resources/{id}";
  }
  rpc ResourceMetadata(QueryGetResourceMetadataRequest) returns (QueryGetResourceMetadataResponse) {
    option (google.api.http).get = "/1.0/identifiers/{collection_id}/resources/{id}/metadata";
  }
  rpc CollectionResources(QueryGetCollectionResourcesRequest) returns (QueryGetCollectionResourcesResponse) {
    option (google.api.http).get = "/1.0/identifiers/{collection_id}/resources/all";
  }
  rpc AllResourceVersions(QueryGetAllResourceVersionsRequest) returns (QueryGetAllResourceVersionsResponse) {
    option (google.api.http).get = "/1.0/identifiers/{collection_id}/resources/versions/{name}";
  }
}

message QueryGetResourceRequest {
  string collection_id = 1;
  string id = 2;
}

message QueryGetResourceResponse {
  ResourceWithMetadata resource = 1;
}

message QueryGetResourceMetadataRequest {
  string collection_id = 1;
  string id = 2;
}

message QueryGetResourceMetadataResponse {
  Metadata resource = 1;
}

message QueryGetCollectionResourcesRequest {
  string collection_id = 1;
}

message QueryGetCollectionResourcesResponse {
  repeated Metadata resources = 1;
}

message QueryGetAllResourceVersionsRequest {
  string collection_id = 1;
  string name = 2;
}

message QueryGetAllResourceVersionsResponse {
  repeated Metadata resources = 1;
}
